<!--
    Copyright (c) 2023-24 Harman International 
   
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
   
     http://www.apache.org/licenses/LICENSE-2.0
         
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
   
    SPDX-License-Identifier: Apache-2.0
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.ecsp.vehicle-profile</groupId>
	<artifactId>vehicle-profile</artifactId>
	<version>1.0.1</version>
	<packaging>pom</packaging>
	<name>vehicle-profile</name>
	<description>Vehicle Profile library for ECSP project</description>
	<url>https://github.com/eclipse-ecsp/vehicle-profile</url>
	
	<modules>
		<module>vehicle-profile-entities</module>
		<module>vehicle-profile-commons</module>
		<module>vehicle-profile-api</module>
		<module>vehicle-profile-sp</module>
	</modules>

	<scm>
		<connection>scm:git:https://github.com/eclipse-ecsp/vehicle-profile.git</connection>
		<url>https://github.com/eclipse-ecsp/vehicle-profile</url>
		<tag>HEAD</tag>
	</scm>
	
	<developers>
		<developer>
			<id>akshaymathur-harman</id>
			<name>Akshay Mathur</name>
			<email>akshay.mathur@harman.com</email>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/eclipse-ecsp/vehicle-profile/issues</url>
	</issueManagement>

	<organization>
		<url>https://github.com/eclipse-ecsp</url>
		<name>eclipse-ecsp</name>
	</organization>
  
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<dockerfile.maven.plugin.version>1.4.13</dockerfile.maven.plugin.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.version>3.8.0</maven.compiler.version>
		<maven.release.plugin.version>2.5.3</maven.release.plugin.version>
		<maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
		<sonar-maven-plugin.version>5.1.0.4751</sonar-maven-plugin.version>
		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
		<puppycrawl.checkstyle-version>10.13.0</puppycrawl.checkstyle-version>
		<maven-checkstyle-plugin.version>3.3.1</maven-checkstyle-plugin.version>
		<cyclonedx-maven-plugin.version>2.7.10</cyclonedx-maven-plugin.version>
		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
		<central-publishing-maven-plugin.version>0.7.0</central-publishing-maven-plugin.version>
		
		<stream.base.version>1.1.0</stream.base.version>
		<dao.version>1.1.1</dao.version>
		<entities.version>1.1.1</entities.version>
		<cache-enabler.version>1.0.0</cache-enabler.version>
		<utils.version>1.1.1</utils.version>
		<api.common.version>1.0.1</api.common.version>
		<api-registry-common.version>1.1.0</api-registry-common.version>
		
		<java.version>17</java.version>
		<spring.version>6.2.4</spring.version>
		<spring-boot-maven-plugin>3.4.4</spring-boot-maven-plugin>
		
		<logback.version>1.5.18</logback.version>
		<jackson.version>2.15.3</jackson.version>
		<hibernate-validator.version>8.0.2.Final</hibernate-validator.version>
		<commons-compress.version>1.27.1</commons-compress.version>
		<netty.version>4.1.119.Final</netty.version>
		<emebed.mongo.version>3.4.3</emebed.mongo.version>
		<embedded-redis.version>0.6</embedded-redis.version>
		<zookeeper.version>3.8.4</zookeeper.version>
		<kafka.version>3.7.2</kafka.version>
		<bouncycastle.version>1.80</bouncycastle.version>
		<jna.version>5.17.0</jna.version>
		<mongodb.version>4.5.1</mongodb.version>
		<junit-vintage-engine.version>5.11.4</junit-vintage-engine.version>
		<lombok.version>1.18.38</lombok.version>
		
        <checkstyle.config.location>${project.basedir}/checkstyle.xml</checkstyle.config.location>
		<sonar.language>java</sonar.language>
		<sonar.java.checkstyle.reportPaths>${project.build.directory}/checkstyle-result.xml</sonar.java.checkstyle.reportPaths>
		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco-ut/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.language>java</sonar.language>
		<checkstyle.suppressions.location>checkstyle-suppressions.xml</checkstyle.suppressions.location>
		<sonar.exclusions>
			<!-- API-->
			**/vehicleprofile/aspects/*.java,
			**/vehicleprofile/config/*.java,
			**/vehicleprofile/constants/*.java,
			**/vehicleprofile/domain/*.java,
			**/vehicleprofile/enums/*.java,
			**/vehicleprofile/exception/*.java,
			**/vehicleprofile/VehicleProfileWebConfig.java,
			**/vehicleprofile/controller/VehicleProfileControllerAdvice.java,
			**/vehicleprofile/commons/service/vin/AbstractVinDecoder.java,
			**/vehicleprofile/rest/mapping/AssociatedVehicle.java,
			**/vehicleprofile/rest/mapping/EcuClient.java,
			**/vehicleprofile/controller/Vehicle*.java,
			**/vehicleprofile/service/EncryptSensitiveDataService.java,


			<!-- commons -->
			**/vehicleprofile/commons/dao/**/*.java,
			**/vehicleprofile/commons/dao/*.java,
			**/vehicleprofile/commons/dto/vin/*.java,
			**/vehicleprofile/commons/dto/vin/vehiclespecs/*.java,
			**/vehicleprofile/commons/enums/*.java,
			**/vehicleprofile/commons/exception/*.java,
			**/vehicleprofile/commons/service/vin/**/*.java,
			**/vehicleprofile/commons/service/vin/*.java,
			**/vehicleprofile/commons/service/rest/*.java,
			**/vehicleprofile/commons/utils/*.java,

			<!-- Entities -->
			**/entities/**/*.java,
			**/events/**/*.java,
			**/vehicleprofile/domin/*.java,
			**/vehicleprofile/utils/*.java,
			**/vehicleprofile/wrappers/*.java,
			<!-- SP -->
			**/vehicleprofile/sp/**/*.java
		</sonar.exclusions>
	</properties>

	<pluginRepositories>
		<pluginRepository>
			<id>dash-licenses-releases</id>
			<url>https://repo.eclipse.org/content/repositories/dash-licenses-releases/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>${maven.release.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.cyclonedx</groupId>
					<artifactId>cyclonedx-maven-plugin</artifactId>
					<version>${cyclonedx-maven-plugin.version}</version>
					<configuration>
						<projectType>application</projectType>
						<schemaVersion>1.5</schemaVersion>
						<includeBomSerialNumber>true</includeBomSerialNumber>
						<includeCompileScope>true</includeCompileScope>
						<includeProvidedScope>true</includeProvidedScope>
						<includeRuntimeScope>true</includeRuntimeScope>
						<includeSystemScope>true</includeSystemScope>
						<includeTestScope>true</includeTestScope>
						<includeLicenseText>true</includeLicenseText>
						<outputFormat>all</outputFormat>
						<outputDirectory>${project.basedir}/sbom</outputDirectory>
						<verbose>false</verbose>
					</configuration>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>makeAggregateBom</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<configuration>
						<forkCount>3</forkCount>
						<reuseForks>true</reuseForks>
						<forkMode>pertest</forkMode>
						<argLine>${surefireArgLine}</argLine>
						<childDelegation>true</childDelegation>
						<skipTests>false</skipTests>
						<runOrder>alphabetical</runOrder>
						<includes>
							<include>**/*Test.java</include>
						</includes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco-maven-plugin.version}</version>
					<executions>
						<execution>
							<id>pre-unit-test</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
							<configuration>
								<destFile>${jacoco.ut.execution.data.file}</destFile>
								<propertyName>surefireArgLine</propertyName>
							</configuration>
						</execution>
						<execution>
							<id>post-unit-test</id>
							<phase>test</phase>
							<goals>
								<goal>report</goal>
							</goals>
							<configuration>
								<dataFile>${jacoco.ut.execution.data.file}</dataFile>
								<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>${sonar-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${maven-checkstyle-plugin.version}</version>
					<configuration>
						<includeTestSourceDirectory>true</includeTestSourceDirectory>
					</configuration>
					<executions>
						<execution>
							<id>validate</id>
							<phase>validate</phase>
							<configuration>
								<consoleOutput>true</consoleOutput>
								<failsOnError>true</failsOnError>
								<outputFileFormat>xml</outputFileFormat>
								<failsOnError>true</failsOnError>
								<failOnViolation>true</failOnViolation>
								<violationSeverity>warning</violationSeverity>
								<includeTestSourceDirectory>true</includeTestSourceDirectory>
								<includeResources>true</includeResources>
								<includeTestResources>true</includeTestResources>
							</configuration>
							<goals>
								<goal>checkstyle</goal>
							</goals>
						</execution>
					</executions>
					<dependencies>						
						<dependency>
							<groupId>com.puppycrawl.tools</groupId>
							<artifactId>checkstyle</artifactId>
							<version>${puppycrawl.checkstyle-version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
                    <groupId>org.eclipse.dash</groupId>
                    <artifactId>license-tool-plugin</artifactId>
                    <version>1.1.0</version>
                    <configuration>
                        <includeScope>test</includeScope>
                    </configuration>
                    <executions>
                        <execution>
                            <id>license-check</id>
                            <goals>
                                <goal>license-check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<compilerArgs>
						<arg>--add-opens=java.base/java.io=ALL-UNNAMED</arg>
						<arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
						<arg>--add-opens=java.base/java.math=ALL-UNNAMED</arg>
						<arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
						<arg>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</arg>
						<arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
						<arg>--add-opens=java.base/java.text=ALL-UNNAMED</arg>
						<arg>--add-opens=java.sql/java.sql=ALL-UNNAMED</arg>
					</compilerArgs>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.cyclonedx</groupId>
				<artifactId>cyclonedx-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<release>${java.version}</release>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
		</plugins>
	</build>
	<profiles>
        <profile>
            <id>dash</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.eclipse.dash</groupId>
                        <artifactId>license-tool-plugin</artifactId>
                        <configuration>
                            <skip>false</skip>
                            <failWhenReviewNeeded>true</failWhenReviewNeeded>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release</id>
            <properties>
                <maven.test.skip>true</maven.test.skip>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>${central-publishing-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                            <waitUntil>published</waitUntil>
                            <centralSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots/</centralSnapshotsUrl>
                        <skipPublishing>false</skipPublishing>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven-source-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven-javadoc-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>javadoc</id>
            <properties>
                <maven.test.skip>true</maven.test.skip>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven-javadoc-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <release>${java.version}</release>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
